# ParaCL

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeUserPresets.json  README.md  conanfile.txt  debug-start.sh  example.cpp  format.sh  manual_for_collaborators.ipynb  project_structure.md  release-ast.dot  start.sh  test.c
.github/workflows/: regression.yml
AST/: CMakeLists.txt  README.md
AST/assets/: ast-text-format-example.txt
AST/cmake/: THE-LASTConfig.cmake.in  debug.cmake
AST/include/: create-basic-node.hpp  read-ast.hpp
AST/src/: thelast.cppm
AST/src/ast/: ast.cppm
AST/src/functional/: graphic-dump.cppm  write.cppm
AST/src/lib-info/: lib-info.cppm.in
AST/src/nodes/: nodes-traits.cppm  nodes-type-erasure.cppm  nodes.cppm
AST/tests/: test.cpp
Compiler/: CMakeLists.txt
Compiler/backend/: CMakeLists.txt  README.md
Compiler/backend/src/: main.cpp
Compiler/backend/src/compiler/: compiler.cppm
Compiler/backend/src/executable-builder/: executable-builder.cppm
Compiler/backend/src/llvm-ir-translator/: libc-standard-functions.cppm  llvm-ir-translator.cppm  nametable.cppm
Compiler/backend/src/options/: options.cppm
Compiler/cmake/tests/e2e/: e2e-paracl-python-script.cmake
Compiler/src/: paracl.cpp
Compiler/tests/e2e/: parse_result.py  run_test.sh.in
Compiler/tests/e2e/ans/: 0021.ans  0040.ans  0045.ans
Compiler/tests/e2e/dat/: 0001.cl  0006.cl  0008.cl  0010.cl  0011.cl  0016.cl  0018.cl  0021.cl  0024.cl  0026.cl  0035.cl  0039.cl  0043.cl
Frontend/: CMakeLists.txt  gen-coverage-summary.sh
Frontend/tests/gtest/: gtest_front.cpp
Frontend/tests/tester/: README.md  tester_config.cmake  tests.profraw
Frontend/tests/tester/cmake/: gtest.cmake
Interpreter/: CMakeLists.txt
Interpreter/backend/: CMakeLists.txt  README.md
Interpreter/backend/src/: main.cpp
Interpreter/backend/src/interpreter/: interpreter.cppm
Interpreter/backend/src/nametable/: nametable.cppm
Interpreter/cmake/tests/e2e/: add-e2e-to-target-function.cmake  e2e-paracl-python-script.cmake
Interpreter/src/: paracl.cpp
Interpreter/tests/e2e/: parse_result.py  run_test.sh.in
Interpreter/tests/e2e/ans/: 0012.ans  0026.ans  0039.ans  0042.ans
Interpreter/tests/e2e/dat/: 0004.cl  0012.cl  0013.cl  0014.cl  0015.cl  0023.cl  0025.cl  0027.cl  0029.cl  0030.cl  0033.cl  0038.cl  0044.cl  0045.cl
benchmark/: benchmark.sh.in
benchmark/dat/: 0001.cl  0002.cl  0003.cl  0004.cl  0005.cl  0006.cl  0007.cl  0008.cl  0009.cl  0010.cl  0011.cl
cmake/: debug.cmake  logger.cmake
cmake/dep/: check-optarg.cmake
cmake/tests/e2e/: add-e2e-to-target-function.cmake  e2e-paracl-python-script.cmake  e2e-tests.cmake
cmake/tests/unit/: add-all-unit-tests.cmake  add-unit-test-to-target-function.cmake
debug/ast/: ast-graph-dump.cppm  ast-text-dump.cppm
debug/in/: run_compile_tets.sh.in  run_test.sh.in
debug/log/: log_api.hpp
debug/log/spdlog-init/: spdlog_init.cppm
debug/parse_program_output/: parse_compile_test_result.py  parse_result.py
debug/stacktrace/: exceptions-stacktrace.cppm
front/: CMakeLists.txt
front/imgs/: ast.dot
front/inc/: paraCL.hpp
front/src/: compiler.cpp  lex.yy.cc  lexer.hpp  lexer.l  lexer.yy.cpp  main.cpp  parcer.cpp  parser.tab.cc  parser.tab.cpp  parser.tab.hh  parser.tab.hpp  parser.y
front/tests/: CMakeLists.txt
frontened_old/parser/inc_old/: ast.hpp
frontened_old/parser/src_old/: parser_exceptions.cpp
imgs/: ast.dot
include/codegen/: main_catch_blocks.in
include/frontend/lexer/: lexer.hpp
include/frontend/parser/: ast.hpp  check_variables.hpp  parse_error.hpp  parser.hpp  parser_exceptions.hpp  token_types.hpp
include/global/: custom_console_output.hpp  global.hpp
src/: main.cpp
src/ast/: ast.cppm  node-type-erasure.cppm  nodes.cppm  test.cpp  write.cppm
src/back/inc/: paraCL.hpp  paraCL_crutch_for_parsery.hpp
src/back/src/: compiler.cpp  compiler.cppm  dump.cpp  dump.cppm  paraCL.cppm  parser.y
src/backend/: interpreter.cppm  parse_paracl_exceptions.cppm  parse_paracl_exit_code.cppm  run_paracl.cppm
src/backend/compiler/linker/: linker.cppm
src/backend/compiler/llvm_ir_translator/: libc_stadart_functions.cppm  name_table.cppm  translate_to_llvm_ir.cppm
src/backend/interpreter/: interpreter.cppm  interpreter_2.cppm  name_table.cppm  nametable.cppm
src/backend/interpretor/: interpreter.cppm  name_table.cppm
src/backend/name_table/: name_table.cppm
src/backend/toolchain/: toolchain.cppm
src/backend/toolchain/compiler/: libc_stadart_functions.cppm  nametable.cppm  objects_builder.cppm
src/backend/toolchain/linker/: linker.cppm
src/front/src/: lexer.l
src/frontend/ast_builder/: ast_builder.cppm
src/frontend/hir_builder/: hir_builder.cppm
src/frontend/lexer/: lexer.l
src/frontend/parser/: check_variables.cpp  parse_error.cpp  parser.y  parser_basic_node.cppm
src/global/string/: find_best_match.cppm
src/hir/: hir.cppm
src/options/: compiler_options.cppm  interpreter_options.cppm  options.cppm
src/options_parser/: options_parser.cppm  paracl_extension.cppm
src/paracl/: paracl_extension.cppm  parse_paracl_exit_code.cppm  run_paracl.cppm
src/paracl_info/: paracl_info.cppm.in
src/paracl_runner/: parse_exceptions.cppm  runner.cppm
src/toolchain/: parse_paracl_exceptions.cppm  toolchain.cppm
tests/e2e/ans/: 0010.ans  0028.ans  0034.ans  0038.ans
tests/e2e/dat/: 0001.cl  0001.pcl  0002.cl  0003.cl  0004.cl  0004.pcl  0005.cl  0006.pcl  0007.cl  0007.pcl  0009.cl  0009.pcl  0010.cl  0011.pcl  0017.pcl  0019.pcl  0020.cl  0020.pcl  0021.cl  0022.cl  0025.pcl  0026.cl  0028.cl  0030.cl  0031.cl  0032.cl  0034.cl  0036.cl  0037.cl  0038.cl  0040.cl  0042.cl  0045.cl
tests/unit/options/: options.cpp
tests/unit/options_parser/: options_parser.cpp
